[package]
build = "build.rs"
name = "rust_zmq-sys"
version = "0.0.1"

[dependencies]
lazy_static = "~1.2.0"
libc = "~0.2.40"
rand = "~0.4.2"
unwrap = "~1.2.0"

[build-dependencies]
cc = "~1.0.9"
flate2 = "~1.0.1"
libc = "~0.2.40"
pkg-config = "~0.3.9"
http_req = "~0.2.1"
sha2 = "~0.7.0"
tar = "~0.4.15"
unwrap = "~1.2.0"
zip = "~0.3.1"
