[package]
name = "holochain_sodium"
version = "0.0.14-alpha1"
authors = ["neonphog <neonphog@gmail.com>","zo-el<zo@el.org>"]
edition = "2018"

[dependencies]
lazy_static = "=1.2.0"
libc = "=0.2.50"
holochain_core_types = { path = "../core_types" }
rust_sodium = { git = "https://github.com/Fraser999/rust_sodium", rev = "94745bc2648d6b8b9ed6d86e6f241cfd6b19a048" }
rust_sodium-sys = { git = "https://github.com/Fraser999/rust_sodium", rev = "94745bc2648d6b8b9ed6d86e6f241cfd6b19a048" }
