[package]
name = "holochain_sodium"
version = "0.0.16-alpha1"
authors = ["neonphog <neonphog@gmail.com>","zo-el<zo@el.org>"]
edition = "2018"

[dependencies]
lazy_static = "=1.2.0"
libc = "=0.2.50"
holochain_core_types = { path = "../core_types" }
rust_sodium = { git = "https://github.com/maidsafe/rust_sodium", rev = "34219d904f80702c57f28428bb2257b184829c87" }
rust_sodium-sys = { git = "https://github.com/maidsafe/rust_sodium", rev = "34219d904f80702c57f28428bb2257b184829c87" }
