[package]
name = "holochain_test_bin"
version = "0.0.19-alpha1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]

[dependencies]
holochain_core = { path = "../core" }
holochain_conductor_api = { path = "../conductor_api" }
holochain_cas_implementations = { path="../cas_implementations" }
holochain_core_types = { path = "../core_types" }
holochain_net = { path = "../net" }
lib3h = "=0.0.1-alpha1"
lib3h_protocol = "=0.0.1-alpha1"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
tempfile = "=3.0.7"
failure = "=0.1.5"
lazy_static = "=1.2.0"
unwrap_to = "=0.1.0"
backtrace = "=0.3.14"
multihash = "=0.8.0"
crossbeam-channel = "=0.3.8"

[[bin]]
name = "holochain_test_bin"
path = "src/main.rs"
