[package]
name = "holochain_test_bin"
version = "0.0.20-alpha3"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]

[dependencies]
holochain_core_types = { path = "../core_types" }
holochain_persistence_api = "=0.0.1-alpha4"
holochain_net = { path = "../net" }
lib3h = "=0.0.2-alpha1"
lib3h_protocol = "=0.0.1-alpha1"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
tempfile = "=3.0.7"
failure = "=0.1.5"
lazy_static = "=1.2.0"
unwrap_to = "=0.1.0"
backtrace = "=0.3.14"
multihash = "=0.8.0"
crossbeam-channel = "=0.3.8"
bincode = "=1.1.4"

[[bin]]
name = "holochain_test_bin"
path = "src/main.rs"
