[package]
name = "holochain_test_bin"
version = "0.0.30-alpha6"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]

[dependencies]
holochain_core_types = { path = "../core_types" }
holochain_persistence_api = "=0.0.8"
holochain_net = { path = "../net" }
lib3h = { git = "https://github.com/holochain/lib3h", branch = "develop" }
lib3h_protocol = { git = "https://github.com/holochain/lib3h", branch = "develop" }
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
tempfile = "=3.0.7"
failure = "=0.1.5"
lazy_static = "=1.2.0"
unwrap_to = "=0.1.0"
backtrace = "=0.3.26"
multihash = "=0.8.0"
crossbeam-channel = "=0.3.8"
bincode = "=1.1.4"
url = "=1.7.2"
snowflake = "=1.3.0"
[[bin]]
name = "holochain_test_bin"
path = "src/main.rs"
