[package]
name = "test_utils"
version = "0.0.44-alpha3"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
description = "holochain test utils"
license = "GPL-3.0-only"
homepage = "https://github.com/holochain/holochain-rust"
documentation = "https://github.com/holochain/holochain-rust"
edition = "2018"

[dependencies]
hdk = { version = "=0.0.44-alpha3", path = "../crates/hdk" }
holochain_net = { version = "=0.0.44-alpha3", path = "../crates/net" }
holochain_core = { version = "=0.0.44-alpha3", path = "../crates/core" }
holochain_conductor_lib = { version = "=0.0.44-alpha3", path = "../crates/conductor_lib" }
holochain_core_types = { version = "=0.0.44-alpha3", path = "../crates/core_types" }
holochain_dpki = { version = "=0.0.44-alpha3", path = "../crates/dpki" }
holochain_wasm_utils = { version = "=0.0.44-alpha3", path = "../crates/wasm_utils" }
holochain_locksmith = { version = "=0.0.44-alpha3", path = "../crates/locksmith" }
holochain_persistence_api = { path = "../../holochain-persistence/crates/holochain_persistence_api" }
holochain_json_api = "=0.0.23"
holochain_json_derive = "=0.0.23"
lib3h_sodium = "=0.0.41"
wabt = "=0.7.4"
tempfile = "=3.0.7"
serde = "=1.0.104"
serde_json = { version = "=1.0.47", features = ["preserve_order"] }
serde_derive = "=1.0.104"
crossbeam-channel = "=0.3.8"
lazy_static = "=1.4.0"
jsonrpc-ws-server = "14.0.1"
base64 = "=0.10.1"
url = { version = "=2.1.0", features = ["serde"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
