[package]
name = "holochain_walkman"
version = "0.0.26-alpha1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"

[dependencies]
holochain_core_types = { path = "../core_types" }
holochain_json_api = "=0.0.15"
holochain_json_derive = "=0.0.15"
# holochain_core = { path = "../core" }
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
